k8s/demo/prod/namespace.yaml
# overlays/demo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
  labels:
    name: demo
    environment: demo
