k8s/demo/prod/service-aliases.demo.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: core
  namespace: demo
spec:
  type: ExternalName
  externalName: serviceradar-core.demo.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: agent
  namespace: demo
spec:
  type: ExternalName
  externalName: serviceradar-agent.demo.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: kv
  namespace: demo
spec:
  type: ExternalName
  externalName: serviceradar-datasvc.demo.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: nats
  namespace: demo
spec:
  type: ExternalName
  externalName: serviceradar-nats.demo.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: db-event-writer
  namespace: demo
spec:
  type: ExternalName
  externalName: serviceradar-db-event-writer.demo.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: zen
  namespace: demo
spec:
  type: ExternalName
  externalName: serviceradar-zen.demo.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: trapd
  namespace: demo
spec:
  type: ExternalName
  externalName: serviceradar-trapd.demo.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: log-collector
  namespace: demo
spec:
  type: ExternalName
  externalName: serviceradar-log-collector.demo.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: rperf
  namespace: demo
spec:
  type: ExternalName
  externalName: serviceradar-rperf.demo.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: rperf-client
  namespace: demo
spec:
  type: ExternalName
  externalName: serviceradar-rperf-client.demo.svc.cluster.local
