k8s/demo/prod/serviceradar-datasvc-grpc-external.yaml
# prod/serviceradar-datasvc-grpc-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: serviceradar-datasvc-grpc-external
  namespace: demo
  annotations:
    metallb.universe.tf/address-pool: k3s-pool
spec:
  type: LoadBalancer
  selector:
    app: serviceradar-datasvc
    app.kubernetes.io/part-of: serviceradar
  ports:
    - name: grpc
      port: 50057
      protocol: TCP
      targetPort: grpc
