k8s/demo/prod/serviceradar-flowgger-external.yaml
# prod/serviceradar-flowgger-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: serviceradar-flowgger-external
  namespace: demo
  annotations:
    metallb.universe.tf/address-pool: k3s-pool
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: serviceradar-flowgger
    app.kubernetes.io/part-of: serviceradar
  ports:
    - name: syslog
      port: 514
      protocol: UDP
      targetPort: syslog
